<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Simple Crypto Widget</string>
    <string name="new_widget">New %s Widget</string>
    <string name="edit_widget">Edit %s Widget</string>
    <string name="add_widget">Add Widget</string>

    <string name="title_fixed_size">Fixed Text Size</string>
    <string name="title_data">Data</string>
    <string name="title_style">Style</string>
    <string name="title_other">Other</string>
    <string name="title_refresh_interval">Refresh Interval</string>
    <string name="title_currency">Currency</string>
    <string name="title_exchange">Exchange</string>
    <string name="title_coin_label">Show coin label</string>
    <string name="title_exchange_label">Show exchange label</string>
    <string name="title_amount_label">Show amount</string>
    <string name="title_theme">Theme</string>
    <string name="title_night_mode">Night Mode</string>
    <string name="title_format">Format</string>
    <string name="title_display">Display</string>
    <string name="title_icon">Show icon</string>
    <string name="title_decimals">Number of decimals</string>
    <string name="title_units">Denomination</string>
    <string name="title_preview">Preview</string>
    <string name="title_currency_symbol">Currency symbol</string>
    <string name="title_about">About</string>
    <string name="title_inverse">Use Inverse</string>
    <string name="title_amount_held">Amount Held</string>
    <string name="title_coin_select">Select Coin</string>
    <string name="title_wallet">Wallet Data</string>
    <string name="title_wallet_bitcoin">Wallet Data (Enter either amount or address)</string>

    <string name="summary_fixed_size">Keep text size consistent across all widgets</string>
    <string name="summary_refresh_interval">Every %s</string>
    <string name="summary_currency">Use %s as currency</string>
    <string name="summary_exchange">Get data from %s</string>
    <string name="summary_units">Show %1$s as %2$s</string>
    <string name="summary_inverse">Show price of %1$s in %2$s</string>
    <string name="summary_decimals_auto">Auto</string>

    <string name="licenses" translatable="false"><![CDATA[
      Licenses:<br/><br/>
        • AndroidX - Apache 2.0<br/>
        • JsonPath - Apache 2.0<br/>
        • Coil - Apache 2.0<br/>
        • OkHttp - Apache 2.0<br/><br/>
        Partial coin data provided by <a href="https://www.coingecko.com">CoinGecko</a>
    ]]>

    </string>

    <string-array name="themes" tools:ignore="InconsistentArrays">
        <item>Solid</item>
        <item>Transparent</item>
    </string-array>
    <string-array name="themeValues" tools:ignore="InconsistentArrays">
        <item>SOLID</item>
        <item>TRANSPARENT</item>
    </string-array>
    <string-array name="nightModes">
        <item>Light</item>
        <item>Dark</item>
        <item>System</item>
    </string-array>
    <string-array name="nightModeValues">
        <item>LIGHT</item>
        <item>DARK</item>
        <item>SYSTEM</item>
    </string-array>
    <string-array name="priceTypes">
        <item>Ask</item>
        <item>Bid</item>
        <item>Spot</item>
    </string-array>
    <string-array name="priceTypeValues">
        <item>ASK</item>
        <item>BID</item>
        <item>SPOT</item>
    </string-array>
    <string-array name="intervals">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="intervalValues">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>360</item>
        <item>0</item>
    </string-array>
    <string-array name="symbols">
        <item>Show local symbol</item>
        <item>Show ISO symbol</item>
        <item>Do not show symbol</item>
    </string-array>
    <string-array name="symbolValues">
        <item>LOCAL</item>
        <item>ISO</item>
        <item>NONE</item>
    </string-array>
    <string name="json_last_modified" translatable="false">Mon, 30 Mar 2026 13:43:35 GMT</string>
    <string name="json_url" translatable="false">https://www.brentpanther.com/cryptowidgetcoins_v2.json</string>

    <string name="error_restricted_battery_saver">Unable to refresh, Battery Saver is on</string>
    <string name="error_restricted_data_saver">Unable to refresh, Data Saver is on</string>

    <string name="button_settings">Open Settings</string>
    <string name="coin_search_hint">Search by name or symbol</string>
    <string name="coin_search_popular">Popular</string>
    <string name="coin_search_more">More from CoinGecko</string>
    <string name="coin_search_powered_by">Powered by CoinGecko</string>

    <string name="settings_update">Update</string>
    <string name="settings_create">Create</string>
    <string name="version">Version %s</string>
    <string name="nav_title_manage_widgets">Manage Widgets</string>
    <string name="nav_title_settings">Settings</string>
    <string name="manage_widgets_empty">You don\'t have any widgets yet!</string>
    <string name="manage_widgets_how_to">How to create a widget:\n• Touch and hold on the home screen.\n• Scroll to Simple Crypto Widget.\n• Drag and drop to the home screen.\n• Configure and create.</string>
    <string name="widget_list_title">%1$s / %2$s</string>
    <string name="warning_data_saver">The app will not refresh because data usage is currently restricted. Please enable the setting to allow unrestricted data usage.</string>
    <string name="warning_battery_saver">The app will not refresh because battery saver is currently restricted.</string>
    <string name="warning_background">The app will not refresh because background usage is currently disabled.</string>

    <string name="state_stale">Price is outdated. Check your internet connection.</string>
    <string name="state_error">Unable to update price. This may be an issue with the exchange.</string>
    <string name="state_rate_limited">Rate limited by exchange.</string>
    <string name="state_invalid_address">Unable to lookup bitcoin address.</string>
    <string name="placeholder_price" translatable="false">$-,---</string>
    <string name="widget_price_name">Current Price</string>
    <string name="widget_value_name">Wallet Value</string>
    <string name="dialog_amount_held">Enter the amount of %1$s held in your wallet. e.g. %2$s</string>
    <string name="add_value_widget">Add Wallet Value Widget</string>
    <string name="add_price_widget">Add Current Value Widget</string>
    <string name="widget_price_summary">Shows the current %s trading price.</string>
    <string name="widget_value_summary">Shows the current value of your %s wallet.</string>
    <string name="dismiss">Dismiss</string>
    <string name="search_error">Error retrieving coins from CoinGecko.</string>
    <string name="search_empty">No coins found.</string>
    <string name="ok">OK</string>
    <string name="pin_widget_failure_title">Unable to create widget</string>
    <string name="pin_widget_failure_text">Your launcher does not support creating widgets this way.\nPlease try to create one from your home screen.</string>
    <string name="tap_to_configure">Tap to configure</string>
    <string name="title_bitcoin_address">Bitcoin Address</string>
    <string name="dialog_wallet_address">Enter a bitcoin wallet address</string>
    <string name="title_price_type">Price Type</string>

    <string name="title_donate">Tip</string>
    <string name="label_donate">Donate Bitcoin</string>
    <string name="summary_donate">Like the app? Tip some bitcoin to support the developer.</string>
    <string name="btc_address" translatable="false">bitcoin:194QqhXirp21F5fJVaqviMeHkzZzkZKyi8</string>

</resources>
