<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:persistent="false">
    <PreferenceCategory
        app:title="@string/title_data">
        <ListPreference
            app:icon="@drawable/ic_outline_local_atm_24"
            android:summary="@string/summary_currency"
            app:key="currency"
            app:title="@string/title_currency" />
        <ListPreference
            app:defaultValue="0"
            app:icon="@drawable/ic_outline_account_balance_24"
            android:summary="@string/summary_exchange"
            app:key="exchange"
            app:title="@string/title_exchange" />
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/title_format">
        <ListPreference
            app:defaultValue="LOCAL"
            app:entries="@array/symbols"
            app:entryValues="@array/symbolValues"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/ic_outline_attach_money_24"
            app:key="symbol"
            app:title="@string/title_currency_symbol" />
        <ListPreference
            app:isPreferenceVisible="false"
            android:icon="@drawable/ic_decimal_comma"
            app:key="units_coin"
            app:title="@string/title_units" />
        <ListPreference
            app:isPreferenceVisible="false"
            android:icon="@drawable/ic_decimal_comma"
            app:key="units_currency"
            app:title="@string/title_units" />
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/title_style">
        <ListPreference
            app:defaultValue="SOLID"
            app:dialogTitle="@string/title_theme"
            app:entries="@array/themes"
            app:entryValues="@array/themeValues"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/ic_outline_color_lens_24"
            app:key="theme"
            app:title="@string/title_theme" />
        <ListPreference
            app:defaultValue="LIGHT"
            app:dialogTitle="@string/title_night_mode"
            app:entries="@array/nightModes"
            app:entryValues="@array/nightModeValues"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/ic_outline_nightlight_24"
            app:key="nightMode"
            app:title="@string/title_night_mode" />
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/title_display">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            android:icon="@drawable/ic_bitcoin"
            app:key="icon"
            app:title="@string/title_icon" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_decimal"
            app:key="decimals"
            app:title="@string/title_decimals" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            android:icon="@drawable/ic_outline_label_24"
            app:key="coinLabel"
            app:title="@string/title_coin_label" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            android:icon="@drawable/ic_outline_label_24"
            app:key="exchangeLabel"
            app:title="@string/title_exchange_label" />
        <Preference android:enabled="false" />
        <Preference android:enabled="false" />
    </PreferenceCategory>
</PreferenceScreen>
